--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,6 +359,14 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
+/* coco gothic regular */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'CocoGothic-Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: url('../fonts/CocoGothic-Regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 /* caveat-regular - cyrillic */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -419,9 +427,10 @@ textarea {
     --middle: #d4894d;
     --light: #ffffff;
     --dark: #31251e;
-    --accent: #B0907A;
-    --brown: #665F55;
+    --accent: #eeaf7c;
+    --daccent: #815027;
     --black: #31251e;
+    --contentBackground: rgba(255, 178, 105, 0.7);
 }
 html{
     box-sizing: border-box;
@@ -430,14 +439,18 @@ html{
     box-sizing: inherit;
 }
 body{
-    font-family: 'Montserrat';
+    font-family: 'CocoGothic-Regular';
     font-style: normal; 
     font-size: 16px;
     line-height: 1.2;
     font-weight: normal;
     color: var(--light);
-    background: url(../img/background.png) no-repeat center fixed;
+    background: url(../img/background4.jpg) no-repeat center fixed;
     background-size: cover; 
+}
+.img{
+    max-width: 100%; /* что бы изображение не превышало размер контейнера в котором оно находится */
+    height: auto;   /* что бы сжималось пропорционально своим размерам */
 }
 .wrapper{
     max-width: 1440px;
@@ -448,11 +461,13 @@ body{
 .header{
     background: var(--middle);
     /*фиксация в верху*/
+    z-index: 5;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     /*фиксация в верху*/
+    transition: transform 0.7s ease;
 }
 .header__wrapper{
     display: flex;
@@ -462,6 +477,19 @@ body{
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.header__logo{
+    margin-bottom: 20px;
+}
+.logo__langs{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.select__element{
+    /* height: 20px; */
+}
+
+/* nav start */
 .header__list{
     display: flex;
     flex-wrap: wrap;
@@ -478,75 +506,613 @@ body{
     color: var(--light);
     text-decoration: none;
     text-transform: uppercase;
+    transition: opacity 0.5s ease;
+
 }
 .header__link:hover, .header__link:focus, .header__link:active{
-    opacity: .75;
+    opacity: .5;
 }
-.header__burger{
+.header__burger-btn{
     display: none;
-    width: 40px;
-    height: 28px;
     position: relative;
-    top: -25px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: none;
+    z-index: 11;
+    margin-right: 20px;
 }
-.burger__line{
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
+.header__burger-btn span{
     position: absolute;
-    left: 0;
+    width: 40px;
+    height: 4px;
+    background-color: var(--light);
+    left: 5px;
+    transition: transform .5s, opacity .5s, background-color .5s;
 }
-.burger__line_first{
-    top: 0;
+.header__burger-btn span:nth-child(1){
+    transform: translateY(-10px);
 }
-.burger__line_second{
-    top: 50%;
-    transform: translateY(-50%);
+.header__burger-btn span:nth-child(3){
+    transform: translateY(10px);
 }
-.burger__line_third{
-    bottom: 0;
+
+.header.open .header__burger-btn span:nth-child(1){
+    transform: translateY(0) rotate(-225deg);
 }
+.header.open .header__burger-btn span:nth-child(2){
+    opacity: 0;
+}
+.header.open .header__burger-btn span:nth-child(3){
+    transform: translateY(0) rotate(225deg);
+
+}
+/* nav end */
 /* header styles end */
 
+/* swiper styles start */
+.swiper-slider{
+    padding-top: 120px;
+    margin-bottom: 50px;
+}
+.swiper {
+    margin-left:auto;
+    margin-right:auto;
+    position:relative;
+    overflow:hidden;
+    list-style:none;
+    padding:0;
+    z-index:1;
+    display:flex;
+    max-width: 100%;
+    height: auto;
+}
+.swiper-wrapper {
+   box-sizing:content-box;
+}
+.swiper-slide {    
+    display:flex;
+    cursor: pointer;
+}
+.swiper-button-next,
+.swiper-button-prev {   
+    border-radius: 40px; 
+    background-color: var(--accent);
+    opacity: .6;
+    padding: 40px;
+    color: var(--dark);
+    transition: opacity 0.5s ease;
+}
+.swiper-button-next::after,
+.swiper-button-prev::after {    
+    font-size: 20px;
+}
+.swiper-button-next:hover,
+.swiper-button-prev:hover {    
+    opacity: 1;
+}
+.swiper-pagination-bullet {
+    border-radius: 0;
+    opacity: 1;
+    width: 30px;
+    height: 10px;
+    transition: background-color 0.5 ease;
+}
+.swiper-pagination-bullet-active {
+    background-color: var(--middle);
+}
+.swiper-slide img {
+}
+/* swiper styles end */
 /* intro styles start */
 .intro{
     /*background: url(../img/background.png) no-repeat center;*/
     /*background-size: cover; /* Картинка будет покрывать весь блок при любых его размерах */
-    padding-top: 100px;
+    /* padding-top: 100px; */
+    margin-bottom: 50px;
 }
-.intro__content{
+
+.content{
     /* max-width: 700px; */
     padding: 20px;
-    background-color: rgba(255, 178, 105, 0.8);
+    background-color: var(--contentBackground);
     border-radius: 20px;
+    width: 100%;
 }
 .intro__title{
-    min-width: 660px;
-    font-family: 'Caveat';
+    max-width: 660px;
+    font-family: 'CocoGothic-Regular';
     font-weight: 700;
     font-size: 76px;
-    line-height: 60px;
+    line-height: 80px;
     color: var(--dark);
     text-transform: uppercase;
     margin-bottom: 22px;
 }
-.intro__subtitle{
+.intro__p{
     max-width:700px;
     color: var(--dark);
     font-size: 26px;
     line-height: 28px;
 }
 /* intro styles end */
+/* location start */
+.location{
+    margin-bottom: 50px;
+}
+.location__title{
+    font-family: 'CocoGothic-Regular';
+    font-weight: 700;
+    font-size: 5vw;
+    line-height: 80px;
+    color: var(--dark);
+    text-transform: uppercase;
+    margin-bottom: 22px;
+}
+.location__content{
+    padding: 20px;
+    background-color: var(--contentBackground);
+    border-radius: 20px;
+    width: 100%;    
+}
+.map__container{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1400px;
+    height: 500px;
+    flex-direction: row;
+}
+.ymaps__text{
+    width: 50%;
+}
+.ymaps__block{
+    width: 50%;
+    height: 100%;
+}
+[class*="copyrights-pane"] {
+    display: none !important;
+}
+[class*="balloon__layout"] {
+    
+}
+.ymaps-2-1-79-balloon{
+    /* блок балуна */
+    background-color: #ffffff;
+    width: 50vh;
+}
+.balloon{
+    width: 400px;
+}
+.balloon__header{
+    display: flex;
+    align-items: center;
+}
+.balloon_title{
+    font-size: 26px;
+    color: var(--dark);
+}
+[class*="balloon__tail"] {
+    
+}
+.ymaps__text__h2 {
+    color: var(--black);
+    font-size: 32px;
+    line-height: 1.2;
+}
+.ymaps__text__p{
+    color: var(--black);
+    font-size: 20px;
+    line-height: 1.2;
+}
+/* .ymaps-2-1-79-balloon__tail::after {
+    content: "";
+    position: absolute; 
+    top: 0; 
+    left: 50%; 
+    margin-left: -10px;
+    width: 20px;
+    height: 20px;
+    background-color: #fff; 
+} */
 
+/* location end */
+/*products start*/
+.products__title{
+    max-width: 660px;
+    font-family: 'CocoGothic-Regular';
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 80px;
+    color: var(--dark);
+    text-transform: uppercase;
+    margin-bottom: 22px;
+}
+.products{
+    padding-top: 160px;
+    margin-bottom: 85px;
+}
+
+/* filter start */
+.filter__menu{
+    display: inline-block;
+    position: relative;
+    background-color: var(--middle);
+    padding: 20px;
+    width: 250px;
+    cursor: pointer;
+    margin-bottom: 15px;
+}
+.filter__menu__title{
+    color: var(--dark);
+    font-size: 25px;
+}
+.filter_sort{
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: var(--middle);
+    padding: 10px;
+    padding-top: 20px;
+    z-index: 8;
+    width: 250px;
+
+}
+.sort__price{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+
+.sort__price select:hover {
+    cursor: pointer;
+}
+.filter__block {
+    display: flex;
+    top: 100%;
+    left: 0;
+    background-color: var(--middle);
+    z-index: 8;
+}
+.filter__block * {
+    cursor: pointer;
+}
+.checkbox__labels{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.checkbox__label{
+    margin-bottom: 5px;
+}
+.checkbox{
+    margin-right: 15px;
+}
+.span__check{
+    color: var(--dark);
+    font-size: 22px;
+}
+/* filter end */
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    height: auto;
+    justify-content: center;
+}
+.card{
+    border: 1px solid var(--middle);
+    border-radius: 15px;
+    overflow: hidden;
+    width: 313px;
+    height: 495px;
+    cursor: pointer;
+    background: var(--light);
+    padding: 15px;
+}
+.card__pic{
+    width: 281px;
+    height: auto;
+    overflow: hidden;
+}
+.card__pic img{
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+}
+.card:hover img {
+    transform: scale(1.2);
+}
+.card__title{
+    color: var(--dark);
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.card__description{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: 500;
+
+    height: 100px;
+    line-height: 20px;
+    color: var(--dark);
+    margin-bottom: 10px;
+}
+.card__footer{
+    display: flex;
+    justify-content: space-between;
+}
+.card__price{
+    font-size: 35px;
+    color: var(--dark);
+}
+.card__cost{
+    font-size: 35px;
+    color: var(--dark);
+}
+
+.container{
+    background-color: #000;
+}
+
+/*products end*/
 /* media start */
-@media screen and (max-width: 767px){
+/* @media screen and (max-width: 1455px){
+    .cards{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 55px;
+    }
+} */
+/* modal start */
+/* .modal{
+    display: flex;
+    visibility: hidden; 
+    opacity: 0; 
+    transition: opacity 300ms ease-in-out;
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+} */
+/* .modal__wrapper{
+    margin: auto;
+    padding: 16px;
+    display: flex;
+    width: 768px;
+    height: auto;
+    background: var(--accent);
+    border-radius: 20px;
+} */
+
+.modal{
+    visibility: hidden; 
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    cursor: pointer;
+    display: flex;
+    opacity: 0;
+    transition: opacity 300ms ease-in-out;
+    z-index: 10;
+}
+.modal__wrapper {
+    position: relative;
+    max-width: 768px;
+    background: var(--accent);
+    border-radius: 20px;
+    display: flex;
+    height: auto;
+    padding: 16px;
+    margin: auto;
+    cursor: default;
+}
+.modal.modal-open{
+    visibility: visible;
+    opacity: 1; 
+    transition: opacity 0.3s ease;
+    /* overflow: hidden; */
+}
+
+.modal__pic{
+    border-radius: 20px;
+    width: 350px;
+    height: auto;
+}
+.modal__pic .img{
+    border-radius: 20px;
+}
+.modal__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 20px;
+    width: 65%;
+}
+.modal__title{
+    color: var(--dark);
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.modal__description{
+    
+    color: var(--dark);
+    font-weight: 500;
+    height: 100px;
+    line-height: 20px;
+    /* margin-bottom: 10px; */
+}
+.modal__footer{
+    display: flex;
+    justify-content: space-between;
+}
+.modal__price{
+    font-size: 35px;
+    color: var(--dark);
+}
+.modal__cost{
+    font-size: 35px;
+    color: var(--dark);
+}
+.modal-close-btn{
+    cursor: pointer;
+    padding: 20px;
+    border-radius: 40px;
+    border: 1px solid var(--middle);
+    color: var(--light);
+    background-color: var(--dark);
+    text-align: center;
+    transition: background-color 0.5s, color 0.5s;
+}
+.modal-close-btn:hover, .modal-close-btn::after,  .modal-close-btn:hover:active{
+    background-color: var(--daccent);
+    color: var(--dark);
+}
+/* modal end */
+.off{
+    display: none;
+}
+
+/* contacts start */
+.contacts{
+    padding-top: 150px;
+}
+.contacts__title{
+    max-width: 660px;
+    font-family: 'CocoGothic-Regular';
+    font-weight: 700;
+    font-size: 76px;
+    line-height: 80px;
+    color: var(--dark);
+    text-transform: uppercase;
+    margin-bottom: 22px;
+}
+.contacts__h2{
+    font-family: 'CocoGothic-Regular';
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 50px;
+    color: var(--dark);
+    margin-bottom: 15px;
+}
+.contacts__p{
+    max-width:700px;
+    color: var(--dark);
+    font-size: 26px;
+    line-height: 28px;
+}
+/* contacts end */
+/* buy start */
+.buy{
+    padding-top: 150px;
+}
+.buy__title{
+    font-family: 'CocoGothic-Regular';
+    font-weight: 700;
+    font-size: 76px;
+    line-height: 80px;
+    color: var(--dark);
+    text-transform: uppercase;
+    margin-bottom: 22px;
+}
+.buy__p{
+    color: var(--dark);
+    font-size: 26px;
+    line-height: 1.2;
+}
+/* buy end */
+/* about start */
+.about{
+    padding-top: 150px;
+}
+.about__title{
+    font-family: 'CocoGothic-Regular';
+    font-weight: 700;
+    font-size: 76px;
+    line-height: 80px;
+    color: var(--dark);
+    text-transform: uppercase;
+}
+.about__h2{
+    font-family: 'CocoGothic-Regular';
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 50px;
+    color: var(--dark);
+    margin-bottom: 15px;
+}
+.about__p {
+    color: var(--dark);
+    font-size: 26px;
+    line-height: 28px;
+    margin-bottom: 15px;
+}
+/* about end */
+/* offers start */
+.offers{
+    padding-top: 150px;
+}
+.offers__title{
+    font-family: 'CocoGothic-Regular';
+    font-weight: 700;
+    font-size: 76px;
+    line-height: 80px;
+    color: var(--dark);
+    text-transform: uppercase;
+    line-height: 1.5;
+}
+.offers__h2{
+    font-family: 'CocoGothic-Regular';
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 50px;
+    color: var(--dark);
+    margin-bottom: 15px;
+    line-height: 1.1;
+}
+.offers__p {
+    color: var(--dark);
+    font-size: 26px;
+    line-height: 28px;
+    margin-bottom: 15px;
+    line-height: 1.1;
+}
+/* offers end */
+@media screen and (max-width: 1088px){
+    .map__container{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        max-width: 1400px;
+        height: auto;
+    }
+    .ymaps__text{
+        width: 100%;
+    }
+    .ymaps__block{
+        width: 100%;
+        height: 80vh;
+    }
+}
+@media screen and (max-width: 953px){
+    /* nav start */
+    .header__burger-btn{
+        display: block;
+    }
     .header__burger{
         display: block;
     }
     .header__nav{
         width: 100%;
         height: 100%;
+        height: 100vh;
         position: fixed;
         top: 0;
         left: 0;
@@ -556,7 +1122,7 @@ body{
         transform: translateX(100%);
         transition: .2s all linear;
     }
-    .header__nav_active{
+    .header.open .header__nav{
         transform: translateX(0);
     }
     .header__item{
@@ -571,27 +1137,156 @@ body{
         font-size: 42px;
         line-height: 48px;
     }
-    .header__nav-close{
-        width: 40px;
-        height: 40px;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        z-index: 11;
+    /* nav end */
+    /* location start */
+    .location__title{
+        font-family: 'CocoGothic-Regular';
+        font-weight: 700;
+        font-size: 7vw;
+        line-height: 55px;
+        color: var(--dark);
+        text-transform: uppercase;
+        margin-bottom: 0;
     }
-    .header__nav-close-line{
-        display: block;
+    /* location end */
+    /* modal start*/
+    .modal{
+        visibility: hidden; 
+        position: fixed;
+        inset: 0;
+        background-color: rgba(0, 0, 0, 0.7);
+        display: flex;
+        cursor: pointer;
+        display: flex;
+        opacity: 0;
+        transition: opacity 300ms ease-in-out;
+        z-index: 10;
+        padding: 15px;
+    }
+    /* modal end*/
+    .ymaps-2-1-79-balloon{
+        /* блок балуна */
+        background-color: #ffffff;
+        width: 35vh;
+    }  
+    .balloon{
+        width: 250px;
+    }
+    .balloon_title{
+        font-size: 20px;
+        color: var(--dark);
+    }    
+}
+@media screen and (max-width: 633px){
+    
+    /*intro start*/
+    
+    .intro__content {
+        /* max-width: 700px; */
+        padding: 20px;
+        background-color: var(--contentBackground);
+        border-radius: 20px;
         width: 100%;
-        height: 2px;
-        background-color: #fff;
-        position: absolute;
-        top: 50%;
     }
-    .header__nav-close-line:first-child{
-        transform: translateY(-50%) rotate(-45deg);
+    
+    .intro__title {
+        max-width: 100%;
+        font-family: 'Caveat';
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 80px;
+        color: var(--dark);
+        text-transform: uppercase;
+        margin-bottom: 22px;
+        word-wrap: break-word;
     }
-    .header__nav-close-line:last-child{
-        transform: translateY(-50%) rotate(45deg);
+    /*intro end*/
+    /* modal start */
+    .modal{
+        visibility: hidden; 
+        position: fixed;
+        inset: 0;
+        background-color: rgba(0, 0, 0, 0.7);
+        display: flex;
+        cursor: pointer;
+        display: flex;
+        opacity: 0;
+        transition: opacity 300ms ease-in-out;
+        z-index: 10;
+        padding: 16px;
     }
+    .modal__wrapper {
+        margin: 16px;
+        position: relative;
+        width: 374px;
+        height: 90vh;
+        align-items: center;
+        background: var(--accent);
+        border-radius: 20px;
+        display: flex;
+        height: auto;
+        padding: 16px;
+        margin: auto;
+        cursor: default;
+        flex-direction: column;
+        
+    }
+    .modal__pic{
+        border-radius: 20px;
+        width: 100%;
+        height: auto;
+        margin-bottom: 15px;
+    }
+    .modal__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 0;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .modal__title{
+        color: var(--dark);
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+    .modal__description{    
+        color: var(--dark);
+        font-weight: 500;
+        height: 100px;
+        line-height: 20px;
+        margin-bottom: 10px;
+    }
+    .modal__footer{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+    }
+    /* modal end */ 
+    .ymaps-2-1-79-balloon{
+        /* блок балуна */
+        background-color: #ffffff;
+        width: 33vh;
+    }  
+    .balloon{
+        width: 250px;
+    } 
+}
+@media screen and (max-width: 401px){
+    .modal__wrapper {    
+        width: 344px;        
+    }
+    .modal__pic{
+        width: 310px;
+    }
+    .ymaps-2-1-79-balloon{
+        /* блок балуна */
+        background-color: #ffffff;
+        width: 100%;
+    }  
+    .balloon{
+        width: 100%;
+    } 
 }
 /* media end */
